# sbi-fuzz

./: .gitignore  Cargo.toml  Dockerfile.dev  LICENSE  Makefile  README.md  Readme.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
common/: Cargo.toml
common/src/: lib.rs
fuzzer/: Cargo.toml  build.rs
fuzzer/src/: fuzz.rs  main.rs
helper/: Cargo.toml
helper/src/: instrument.patch  instrumenter.rs  main.rs  runner.rs  seed_generator.rs
injector/: Makefile
injector/src/: injector.c  linker.ld  stdint.h
playground/: README.md
playground/opensbi-fuzz/: Makefile  compile-opensbi.sh
playground/opensbi-sanitizer-demo/: Makefile  kasan-test.patch  test-heap-overflow.toml  test-integer-overflow.toml
playground/rustsbi-fuzz/: Makefile
